css/overlay.css
div#nts-mini-overlay {
  -webkit-background-clip: border-box;
  -webkit-background-origin: padding-box;
  -webkit-background-size: auto;
  align-content: center;
  align-items: center;
  border-right: 1px solid #151515;
  color: #BF1315;
  cursor: pointer;
  display: flex;
  height: 100%;
  justify-content: center;
  margin: 0;
  order: 5;
  padding: 0;
  position: relative;
  text-align: center;
  background-color: transparent;
}

div#nts-mini-overlay::after {
  border-right: 1px solid #151515;
  content: "";
}

div#nts-mini-overlay span {
  position: relative;
  font-size: 3.6em;
  transition-duration: 0.1s;
  font-family: mdxicons;
  width: 2em;
  font-style: italic;
  line-height: 3em;
  font-weight: bold;
  margin-top: -3px;
  background: linear-gradient( #FF2828, #430000);
  -webkit-background-clip: text;
  color: transparent;
}

div#nts-mini-overlay span:hover {
  font-size: 3.8em;
  color: #CF2325;
  background: linear-gradient( #FF5C5C, #700000);
  -webkit-background-clip: text;
  color: transparent;
  padding-left: 0em;
  margin-right: -0.05em;
  margin-left: -0.05em;
  margin-top: -0.1em;
}

div#nts-scrubber-theme {
  height: 1.6em;
  border-radius: 0em;
  box-shadow: transparent 0px 0.0em 0.0em 1px;
  overflow: hidden;
  box-sizing: border-box;
  position: absolute;
  background: rgba(0, 0, 0, 0.5);
}

.nts-submit-mode {
  background: -webkit-radial-gradient( #2CB709 33%, #1F8306) !important;
}

div.nts-submit-popup {
  display: none;
  background-color: rgb(38, 38, 38);
  border-radius: 5px;
  box-shadow: rgb(0, 0, 0) 0px 2px 1px 0px;
  cursor: pointer;
  height: 100%;
  width: 165%;
  bottom: 175%;
  right: -35%;
  padding-top: 15%;
  color: white;
  position: absolute;
  text-align: middle;
  font-size: 2.2em;
  line-height: 1.4em;
  visibility: visible;
  z-index: 2;
}

div.nts-submit-popup:after {
  top: 100%;
  border: solid transparent;
  content: " ";
  height: 0;
  width: 0;
  right: 36%;
  position: absolute;
  border-top-color: #262626;
  border-width: .7em;
  margin-left: -.7em;
}

div.player-next-episode {
  border-left: 1px solid rgb(50, 50, 50) !important;
  margin-left: 0px !important;
  padding-left: 7px !important;
}

